<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_this_match">About this Match</string>
    <string name="about_us">About Us</string>
    <string name="access_code">Access Code</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="account_number">Account number</string>
    <string name="account_verification">Account Verification</string>
    <string name="adAppId">ca-app-pub-8358501516425252~4568057249</string>
    <string name="add">ADD</string>
    <string name="add_money">ADD MONEY</string>
    <string name="admob_Rewarded_Video_Ads">ca-app-pub-8358501516425252/4584863958</string>
    <string name="airplane">Airplane mode</string>
    <string name="airplane_on">You have turned on the airplane mode.</string>
    <string name="already_a_user">Already a user?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amount_to_add">Amount to Add</string>
    <string name="app_currency">Coins</string>
    <string name="app_name">War Tournament</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">APPLY</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="available_playcoin_">Available PlayCoin :</string>
    <string name="bank_name">Bank Name</string>
    <string name="bonus">Bonus</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="by_joining_this_contest_you_accept_fantasyji_s_and_con_rm_that_you_are_a_resident_of_india_expect_for_the_states_of_assam_odisha_telangana_nagaland_or_sikkim_amp_your_age_is_18_and_above_in_case_y">By joining this contest, you accept Fantasyji\'s and conﬁrm that you are a resident of india expect for the states of Assam, Odisha, Telangana, Nagaland or Sikkim &amp; your age is 18 and above. In case y</string>
    <string name="by_registering_i_agree_to_fantasyji_s_terms_and_conditions_and_privacy_policy">By Registering, I agree to War Tournament\'s</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_back_in_sometime">Check back in sometime...</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_one">Choose one</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="code">Code</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete_task">Complete Task</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="country_code">Country Code</string>
    <string name="coupon_code">SignUp Code</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_your_new_password">Create your new password.</string>
    <string name="credit">Credit</string>
    <string name="customer_support">Customer Support</string>
    <string name="date">Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="debit">Debit</string>
    <string name="default_match_notice">Default match notice</string>
    <string name="deposited">Deposited</string>
    <string name="desc_refer">Invite your friends on App using your Promo Code to Earn 10 Rs when they join first paid match. Your friends also get 5 Rs as Signup Bonus!</string>
    <string name="desc_reward">Watch videos to get reward after every day.</string>
    <string name="do_not_send_otp">I will Use IPIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="earnings">Earnings</string>
    <string name="easypay_config_endpoint">http://10.0.28.74:8080/MerchantSite/db.json</string>
    <string name="easypay_config_endpoint01">http://sachin.webscript.io/sachin</string>
    <string name="easypay_config_endpoint02">http://10.0.9.39:8100/HANDLER_INTERNAL/easypayConfig</string>
    <string name="easypay_error_endpoint">https://easypay.paytm.com/paytmAnalytics/logerror</string>
    <string name="easypay_hide_password">Hide Password</string>
    <string name="easypay_logevent_endpoint">https://easypay.paytm.com/paytmAnalytics/logevent</string>
    <string name="easypay_show_password">Show Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="email_id">Email Id</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_pubg_username">Enter Game Username</string>
    <string name="enter_the_otp_you_received">Enter the OTP you received</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="entry_fee_">Entry Fee :</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="note_refer">*Note: get bonus when they join paid match.</string>
    <string name="phone_number">Phone number</string>
    <string name="promo_code_optional">Promo Code (Optional)</string>
    <string name="refer_more_to_earn_more">Refer More to Earn More!</string>
    <string name="refer_now">Refer Now</string>
    <string name="referral_offer_is_currently_under_maintenance_nstay_tuned_for_further_updates">Referral Offer is currently under maintenance. Stay Tuned for further updates!</string>
    <string name="referral_offer_paused">Referral Offer Paused!</string>
    <string name="verify">VERIFY</string>
    <string name="your_promo_code">Your Promo Code</string>
</resources>