<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar" />

    <LinearLayout
        android:id="@+id/noReferOffer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:src="@drawable/referandearn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/referral_offer_paused"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/referralExpiredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/referral_offer_is_currently_under_maintenance_nstay_tuned_for_further_updates"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/referralLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkBlue"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/refer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/lato_black"
                    android:gravity="center"
                    android:text="@string/refer_more_to_earn_more"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#ffecab31"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/refMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:text="@string/desc_refer"
                    android:textColor="#ffffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/your_promo_code"
                    android:textAllCaps="true"
                    android:textColor="#ff302f2f"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/referCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/dotted_border"
                    android:fontFamily="@font/lato_black"
                    android:padding="15dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#ff000000"
                    android:textIsSelectable="true" />

                <ImageView
                    android:id="@+id/howrefer"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:src="@drawable/refern_n_earn" />

                <Button
                    android:id="@+id/referButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttonback"
                    android:fontFamily="@font/lato"
                    android:text="@string/refer_now"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#ffffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/note_refer"
                    android:textAllCaps="false"
                    android:textColor="#ff302f2f"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
