<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_right_rounded"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/close" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enter_your_mobile_number"
        android:textColor="#082240"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_border"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/country_code"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    app:ccpDialog_textColor="#242627"
                    app:ccp_contentColor="#242627"
                    app:ccp_defaultPhoneCode="91"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_phnone_botom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="#242627"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/img_cc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins"
                android:text="@string/coupon_code"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_coupon_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_cc"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@null"
                android:hint="@string/promo_code_optional"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_apply_coupon_social"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:visibility="visible"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/orange_color">

                    <TextView
                        android:id="@+id/txt_apply_social"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/apply"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/img_remove_coupon_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins"
                android:text="Remove"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/promo_applied_text_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="XYZ promo applied"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_check_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_checks"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_submit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="60dp"
            android:paddingTop="15dp"
            android:paddingEnd="60dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_checkmark" />

            <TextView
                android:id="@+id/txt_submit_for_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/verify"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
